--- a/index.html
+++ b/index.html
@@ -123,11 +123,9 @@
     }
 
     /* =========================
-       ✅ THEME 3 (your new theme variables)
-       - This is a SAFE integration for your current page.
+       ✅ THEME 3
        ========================= */
     .eec-app.theme-3{
-      /* Your variables */
       --bg-800: #081028;
       --bg-700: #0a1330;
       --bg-600: #0b1739;
@@ -151,7 +149,6 @@
 
       --gradient--pink: linear-gradient(to bottom right, #cb3cff 20%, #7f25fb 68%);
 
-      /* Map to site tokens */
       --bg0: var(--bg-800);
       --bg1: var(--bg-700);
       --panel: var(--bg-700);
@@ -178,7 +175,6 @@
         linear-gradient(180deg, var(--bg-800), #060b18 70%, #050814);
     }
 
-    /* ✅ Theme-3 Light Mode (optional toggle) */
     .eec-app.theme-3.light-theme{
       --bg-800: #ffffff;
       --bg-700: #ffffff;
@@ -210,16 +206,7 @@
     }
 
     /* =========================================================
-       Font utility classes from your theme (safe to keep)
-       ========================================================= */
-    .f1{ font-size:24px; line-height:32px; letter-spacing:0 }
-    .f2{ font-size:20px; line-height:22px; letter-spacing:0 }
-    .f3{ font-size:14px; line-height:14px; letter-spacing:0 }
-    .f4{ font-size:12px; line-height:14px; letter-spacing:0 }
-    .f5{ font-size:10px; line-height:14px; letter-spacing:0 }
-
-    /* =========================================================
-       ✅ Theme switch button (your style)
+       ✅ Theme switch button
        ========================================================= */
     .theme-switch{
       background: linear-gradient(135deg, #3A57E8, #08B1BA);
@@ -245,8 +232,6 @@
       transform:scale(1.06);
       box-shadow:0 6px 15px rgba(0,0,0,.3);
     }
-
-    /* Theme 3: give switch a pink glow */
     .eec-app.theme-3 .theme-switch{
       background: var(--gradient--pink);
       box-shadow: 0 8px 18px rgba(203,60,255,.20);
@@ -390,7 +375,6 @@
       font-size:13px;
       box-shadow: inset 0 0 0 1px rgba(0,0,0,.06);
     }
-
     .eec-app.theme-3 .h-pill{
       background: rgba(8,16,40,.70);
       border-color: rgba(203,60,255,.45);
@@ -460,7 +444,6 @@
     .duration{ color: rgba(234,240,255,.76); font-size:14px; font-weight:900 }
     .venue{ color: rgba(278,252,204,.92); font-size:15px }
 
-    /* Theme-3 typography tuning */
     .eec-app.theme-3 .date-top{ color: var(--neutral--colors--300); }
     .eec-app.theme-3 .duration{ color: var(--neutral--colors--400); }
     .eec-app.theme-3 .venue{ color: var(--neutral--colors--200); }
@@ -606,6 +589,28 @@
     .eec-app.theme-3 .footer span{ color: var(--neutral--colors--300); }
     .eec-app.theme-3.light-theme .footer span{ color: var(--neutral--colors--300); }
 
+    /* =========================================================
+       ✅ MOBILE CENTER CARD FIX (هذا التعديل المطلوب)
+       - يجعل الكارد في النص وبعرض ثابت مثل المثال
+       ========================================================= */
+    @media (max-width: 560px){
+      body{
+        padding: 14px;
+        padding-left:  max(14px, env(safe-area-inset-left));
+        padding-right: max(14px, env(safe-area-inset-right));
+        padding-top:   max(14px, env(safe-area-inset-top));
+        padding-bottom:max(14px, env(safe-area-inset-bottom));
+      }
+      .eec-app{
+        padding: 0;             /* نخلي البودي هو اللي يتحكم بالهوامش */
+        min-height: auto;       /* ما نحتاجها على الجوال */
+      }
+      .app{
+        width: 100%;
+        max-width: 430px;       /* غيّرها 400-460 حسب ذوقك */
+        margin: 0 auto;
+      }
+    }
   </style>
 </head>
 
@@ -697,10 +702,8 @@
       THEMES.forEach(t => appRoot.classList.remove(t));
       appRoot.classList.add(themeName);
 
-      // Reset theme-3 light mode unless explicitly enabled
       if (themeName !== 'theme-3') appRoot.classList.remove('light-theme');
 
-      // Icon + label
       if (themeName === 'theme-1'){
         themeIcon.className = 'fa-solid fa-moon';
         themeLabel.textContent = 'ثيم 1 (الأصلي)';
@@ -714,7 +717,6 @@
           : 'ثيم 3 (داكن)';
       }
 
-      // Save
       localStorage.setItem('eec_theme', themeName);
       localStorage.setItem('eec_theme3_light', appRoot.classList.contains('light-theme') ? '1' : '0');
     }
@@ -726,28 +728,19 @@
       setTheme(next);
     }
 
-    // Long press toggles light mode INSIDE theme-3
     let pressTimer = null;
     themeSwitch.addEventListener('pointerdown', () => {
       pressTimer = setTimeout(() => {
         if (getCurrentTheme() === 'theme-3') {
           appRoot.classList.toggle('light-theme');
-          // update label only
           setTheme('theme-3');
         }
       }, 550);
     });
-    themeSwitch.addEventListener('pointerup', () => {
-      if (pressTimer) clearTimeout(pressTimer);
-    });
-    themeSwitch.addEventListener('pointercancel', () => {
-      if (pressTimer) clearTimeout(pressTimer);
-    });
+    themeSwitch.addEventListener('pointerup', () => { if (pressTimer) clearTimeout(pressTimer); });
+    themeSwitch.addEventListener('pointercancel', () => { if (pressTimer) clearTimeout(pressTimer); });
 
-    // Normal click cycles themes
-    themeSwitch.addEventListener('click', () => {
-      toggleThemeCycle();
-    });
+    themeSwitch.addEventListener('click', () => { toggleThemeCycle(); });
 
     function applySavedTheme(){
       const saved = localStorage.getItem('eec_theme');
@@ -764,7 +757,6 @@
       }
     }
 
-    // Helpers: Arabic digits -> English digits
     function convertArabicToEnglishNumbers(str) {
       const arabic = '٠١٢٣٤٥٦٧٨٩';
       const english = '0123456789';
@@ -774,7 +766,6 @@
       }).join('');
     }
 
-    // Translate short day names
     function translateDayShort(dayShort) {
       const map = {
         'Sun':'الأحد','Mon':'الاثنين','Tue':'الثلاثاء','Wed':'الأربعاء',
@@ -783,7 +774,6 @@
       return map[dayShort] || dayShort || '';
     }
 
-    // Parse date in txt: "25-12-2025 (Thu)"
     function parseTxtDate(dateStr) {
       const m = String(dateStr || '').match(/(\d{2})-(\d{2})-(\d{4})\s*\((\w+)\)/);
       if (!m) return null;
@@ -805,7 +795,6 @@
       elRows.innerHTML = `<div class="empty">${escapeHtml(msg)}</div>`;
     }
 
-    // ✅ Duration: 1H 30M / 3H / 45M
     function formatDuration(raw) {
       if (!raw) return "";
       const h = String(raw).match(/(\d+)\s*H/i);
@@ -820,7 +809,6 @@
       return String(raw);
     }
 
-    // ✅ Time: split start/end
     function formatTimeRange(raw) {
       if (!raw) return { from: "", to: "" };
       const parts = String(raw).split("-").map(p => p.trim());
@@ -869,7 +857,6 @@
       elRows.innerHTML = html;
     }
 
-    // ✅ Search via API
     async function doSearch() {
       const cleaned = convertArabicToEnglishNumbers(elStudentId.value).replace(/\D/g,'').trim();
 
@@ -950,7 +937,6 @@
       }
     });
 
-    // Init
     (function init(){
       renderEmpty('ابدأ بإدخال الرقم الأكاديمي للبحث.');
     })();
